--- a/wsp/05-typescript/package.json
+++ b/wsp/05-typescript/package.json
@@ -1,10 +1,27 @@
 {
+  "name": "review",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "ts-node main.ts",
+    "dev": "ts-node-dev main.ts"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.17",
-    "ts-node": "^10.9.1"
+    "@types/express-session": "^1.17.7",
+    "@types/node": "^20.4.2",
+    "ts-node": "^10.9.1",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.1.6"
   },
   "dependencies": {
-    "-": "^0.0.1",
-    "express": "^4.18.2"
+    "cookie-parser": "^1.4.6",
+    "express": "^4.18.2",
+    "express-session": "^1.17.3"
   }
 }
