--- a/wsp/05-typescript/package.json
+++ b/wsp/05-typescript/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "ts-node main.ts",
+    "start": "ts-node-dev main.ts",
     "dev": "ts-node-dev main.ts"
   },
   "keywords": [],
@@ -14,14 +14,19 @@
   "devDependencies": {
     "@types/express": "^4.17.17",
     "@types/express-session": "^1.17.7",
+    "@types/jsonfile": "^6.1.1",
     "@types/node": "^20.4.2",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.1.6"
   },
   "dependencies": {
+    "@types/cookie-parser": "^1.4.3",
+    "@types/formidable": "^2.0.6",
     "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
-    "express-session": "^1.17.3"
+    "express-session": "^1.17.3",
+    "formidable": "^2.1.2",
+    "jsonfile": "^6.1.0"
   }
 }
